--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="col-md-6">
                 <nav class="container navbar navbar-light bg-light">
                     <div class="container-fluid">
-                        <span class="navbar-brand mb-0 h1">Pie Chart - Gender, Age, Flight status</span>
+                        <span class="navbar-brand mb-0 h1">Pie Chart - Gender, Age, Flight Status</span>
                     </div>
                 </nav>
                 <div class="text-center">
@@ -94,7 +94,7 @@
                 <nav class="container navbar navbar-light bg-light">
                     <div class="container-fluid">
                         <span class="navbar-brand mb-0 h1">Tree Map - Visited Country</span>
-                        <span class="navbar-text" id="selectedCountry">No country selected</span>
+                        <span class="navbar-text" id="selectedCountry">No Country Selected</span>
                     </div>
                 </nav>
                 <div class="text-center">
