--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="components/piechart.js"></script>
     <script src="components/linechart.js"></script>
 
-    <title>Airline Visualization</title>
+    <title>Airline Travel Insights Dashboard</title>
     <style>
         body {
             background: #eee;
@@ -60,7 +60,7 @@
             <div class="col-md-6">
                 <nav class="container navbar navbar-light bg-light">
                     <div class="container-fluid">
-                        <span class="navbar-brand mb-0 h1">Pie Chart - Gender, Age, Flight Status</span>
+                        <span class="navbar-brand mb-0 h1">Pie Chart - Gender, Age, Flight Status Distribution</span>
                     </div>
                 </nav>
                 <div class="text-center">
@@ -74,7 +74,7 @@
                     </div>
                     <div class="chart-container">
                         <svg width="200" height="200" id="statusPieChart"></svg>
-                        <div>Flight Status</div>
+                        <div>Flight Status Distribution</div>
                     </div>
                 </div>
             </div>
